# pre-commit-hooks

./: .markdownlint.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .yamllint.yaml  README.md  pyproject.toml
.github/workflows/: run-pre-commit.yaml
